feat(tasks): add presigned attachments
